--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="https://png.pngtree.com/png-vector/20240905/ourmid/pngtree-bitcoin-watercolor-crypto-logo-3d-art-png-image_13758664.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Crypto Track</title>
+    <title>Crypto Radar</title>
   </head>
   <body>
     <div id="root"></div>
